fix(style): old skool style tweak text align center oh yes

--- a/src/assets/css/shame.css
+++ b/src/assets/css/shame.css
@@ -32,9 +32,7 @@
 
 .header,
 .footer {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
+  text-align: center;
 }
 
 .header {
@@ -42,6 +40,7 @@
 }
 
 .header img {
+  display: inline-block;
   margin: 1rem 0;
 }
 
@@ -62,6 +61,10 @@
 .footer a:focus,
 .footer a:active {
   color: var(--blueviolet);
+}
+
+.footer small {
+  text-align: center;
 }
 
 /* o-list-bare centered (both ways) inline list using flexbox */
